src/objects/Final_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Ability__c</fullName>
        <label>Ability</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Team__c</fullName>
        <label>Final Team</label>
        <referenceTo>Final_Team__c</referenceTo>
        <relationshipLabel>Final Team Members</relationshipLabel>
        <relationshipName>Final_Team_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <formula>Pokemon__r.Form__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Held_Item__c</fullName>
        <label>Held Item</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_1__c</fullName>
        <label>Move 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_2__c</fullName>
        <label>Move 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_3__c</fullName>
        <label>Move 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature__c</fullName>
        <label>Nature</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pokemon__c</fullName>
        <label>Pokemon</label>
        <referenceTo>Pokemon__c</referenceTo>
        <relationshipLabel>Final Team Members</relationshipLabel>
        <relationshipName>Final_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(Pokemon__r.Is_Alolan__c, Pokemon__r.Form__r.Alolan_Type__c, Pokemon__r.Form__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Final Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Final_Team__c</columns>
        <columns>Pokemon__c</columns>
        <columns>Form__c</columns>
        <columns>Type__c</columns>
        <columns>Level__c</columns>
        <columns>Nature__c</columns>
        <columns>Ability__c</columns>
        <columns>Held_Item__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FTM-{000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Final Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Level_Invalid</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Level__c &lt; 1, Level__c &gt; 100)</errorConditionFormula>
        <errorDisplayField>Level__c</errorDisplayField>
        <errorMessage>Level must be between 1 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nuzlocke_Mismatch</fullName>
        <active>true</active>
        <description>Pokemon must be from the same Nuzlocke as the Final Team</description>
        <errorConditionFormula>Pokemon__r.Nuzlocke__c &lt;&gt; Final_Team__r.Nuzlocke__c</errorConditionFormula>
        <errorDisplayField>Pokemon__c</errorDisplayField>
        <errorMessage>Pokemon must be from the same Nuzlocke as the Final Team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Members_Limit_Reached</fullName>
        <active>true</active>
        <description>The final team already has 6 members</description>
        <errorConditionFormula>Final_Team__r.Number_Of_Members__c = 6</errorConditionFormula>
        <errorMessage>The final team already has 6 members</errorMessage>
    </validationRules>
</CustomObject>